force-app/main/default/objects/Daily_Health_Record__c/Daily_Health_Record__c.object-meta.xml
<CustomObject>
    <description>Stores daily health and well-being activity records for a Contact, including food intake, physical activity, health metrics, mood, and journal notes.</description>
    <label>Daily Health Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Health Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>