force-app/main/default/objects/Daily_Health_Record__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>The date for which this Daily Health Record applies. Only one record is allowed per Contact per date.</description>
    <inlineHelpText>Enter the date this health record is for. Only one record per person per day is allowed.</inlineHelpText>
    <label>Activity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>