force-app/main/default/objects/Daily_Health_Record__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <description>Records what the user had for breakfast, including foods and approximate quantities.</description>
    <inlineHelpText>Describe what you had for breakfast, e.g., "2 eggs, toast, orange juice".</inlineHelpText>
    <label>Breakfast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>