force-app/main/default/objects/Daily_Health_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Master-Detail relationship linking this Daily Health Record to its parent Contact. Drives record ownership and sharing.</description>
    <inlineHelpText>Select the Contact this health record belongs to. This is required and drives record-level security.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Daily Health Records</relationshipLabel>
    <relationshipName>Daily_Health_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>