force-app/main/default/objects/Daily_Health_Record__c/fields/Conversation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Summary__c</fullName>
    <description>Rich text area to store the AI-generated summary of the conversation used to populate this health record.</description>
    <inlineHelpText>This field contains the summarized conversation transcript that was used to populate this record.</inlineHelpText>
    <label>Conversation Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>