force-app/main/default/objects/Daily_Health_Record__c/fields/Daily_Notes__c.field-meta.xml
<CustomField>
    <fullName>Daily_Notes__c</fullName>
    <description>Free-form rich text field for the user to record any additional daily notes, observations, or journal entries.</description>
    <inlineHelpText>Enter any additional notes about your day, health observations, or personal journal entries.</inlineHelpText>
    <label>Daily Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>