force-app/main/default/objects/Daily_Health_Record__c/fields/Daily_Summary__c.field-meta.xml
<CustomField>
    <fullName>Daily_Summary__c</fullName>
    <description>Rich text area to store the AI-generated daily health summary that consolidates all tracked activities and metrics for the day.</description>
    <inlineHelpText>This field contains the AI-generated summary of all health activities and metrics recorded for the day.</inlineHelpText>
    <label>Daily Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>