force-app/main/default/objects/Daily_Health_Record__c/fields/Dinner__c.field-meta.xml
<CustomField>
    <fullName>Dinner__c</fullName>
    <description>Records what the user had for dinner, including foods and approximate quantities.</description>
    <inlineHelpText>Describe what you had for dinner, e.g., "Rice, dal, vegetables, yogurt".</inlineHelpText>
    <label>Dinner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>