force-app/main/default/objects/Daily_Health_Record__c/fields/Exercise_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Notes__c</fullName>
    <description>Free-text notes describing physical exercise or workouts performed during the day beyond walking.</description>
    <inlineHelpText>Describe any exercise done today, e.g., "30 min yoga, 20 min cycling, 10 push-ups".</inlineHelpText>
    <label>Exercise Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>