force-app/main/default/objects/Daily_Health_Record__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <description>Records what the user had for lunch, including foods and approximate quantities.</description>
    <inlineHelpText>Describe what you had for lunch, e.g., "Chicken salad, water, fruit".</inlineHelpText>
    <label>Lunch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>