force-app/main/default/objects/Daily_Health_Record__c/fields/Mood__c.field-meta.xml
<CustomField>
    <fullName>Mood__c</fullName>
    <description>Multi-select picklist capturing the user's emotional and physical mood for the day.</description>
    <inlineHelpText>Select one or more moods that best describe how you felt today.</inlineHelpText>
    <label>Mood</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Very Happy</fullName>
            </value>
            <value>
                <fullName>Excited</fullName>
            </value>
            <value>
                <fullName>Energetic</fullName>
            </value>
            <value>
                <fullName>Motivated</fullName>
            </value>
            <value>
                <fullName>Confident</fullName>
            </value>
            <value>
                <fullName>Calm</fullName>
            </value>
            <value>
                <fullName>Relaxed</fullName>
            </value>
            <value>
                <fullName>Peaceful</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Tired</fullName>
            </value>
            <value>
                <fullName>Very Tired</fullName>
            </value>
            <value>
                <fullName>Sleepy</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
            <value>
                <fullName>Lazy</fullName>
            </value>
            <value>
                <fullName>Low Energy</fullName>
            </value>
            <value>
                <fullName>Stressed</fullName>
            </value>
            <value>
                <fullName>Overwhelmed</fullName>
            </value>
            <value>
                <fullName>Worried</fullName>
            </value>
            <value>
                <fullName>Anxious</fullName>
            </value>
            <value>
                <fullName>Nervous</fullName>
            </value>
            <value>
                <fullName>Restless</fullName>
            </value>
            <value>
                <fullName>Sad</fullName>
            </value>
            <value>
                <fullName>Very Sad</fullName>
            </value>
            <value>
                <fullName>Depressed</fullName>
            </value>
            <value>
                <fullName>Lonely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>