force-app/main/default/objects/Daily_Health_Record__c/fields/Snacks__c.field-meta.xml
<CustomField>
    <fullName>Snacks__c</fullName>
    <description>Records any snacks or small meals consumed between main meals during the day.</description>
    <inlineHelpText>List any snacks consumed during the day, e.g., "Apple, handful of nuts, tea".</inlineHelpText>
    <label>Snacks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>