force-app/main/default/objects/Daily_Health_Record__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates the input method used to create this Daily Health Record — Voice or Text.</description>
    <inlineHelpText>Select Voice if this record was created via voice input, or Text if it was entered manually.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
                <default>true</default>
                <label>Voice</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>