force-app/main/default/objects/Daily_Health_Record__c/fields/Walking_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Walking_Distance_KM__c</fullName>
    <description>Total distance walked during the day measured in kilometers, supporting two decimal places for precision.</description>
    <inlineHelpText>Enter total walking distance in kilometers, e.g., 5.25 for five and a quarter kilometers.</inlineHelpText>
    <label>Walking Distance KM</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>