force-app/main/default/objects/Daily_Health_Record__c/fields/Water_Intake_Liters__c.field-meta.xml
<CustomField>
    <fullName>Water_Intake_Liters__c</fullName>
    <description>Total water intake for the day measured in liters. Supports one decimal place for half-liter precision.</description>
    <inlineHelpText>Enter total water consumed today in liters, e.g., 2.5 for two and a half liters.</inlineHelpText>
    <label>Water Intake Liters</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>