force-app/main/default/objects/Daily_Health_Record__c/fields/Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Weight_KG__c</fullName>
    <description>Body weight measurement recorded for the day, stored in kilograms with two decimal places.</description>
    <inlineHelpText>Enter your body weight in kilograms, e.g., 72.50. Record this at the same time each day for consistency.</inlineHelpText>
    <label>Weight KG</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>