force-app/main/default/objects/Daily_Health_Record__c/listViews/My_Contact_Daily_Health_Records.listView-meta.xml
<ListView>
    <fullName>My_Contact_Daily_Health_Records</fullName>
    <filterScope>Everything</filterScope>
    <label>My Contact Daily Health Records</label>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Weight_KG__c</columns>
    <columns>Mood__c</columns>
    <columns>Source__c</columns>
</ListView>