force-app/main/default/objects/Daily_Health_Record__c/listViews/Recent_Daily_Health_Records.listView-meta.xml
<ListView>
    <fullName>Recent_Daily_Health_Records</fullName>
    <filterScope>Everything</filterScope>
    <label>Recent Daily Health Records</label>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Weight_KG__c</columns>
    <columns>Mood__c</columns>
    <columns>Source__c</columns>
    <filters>
        <field>Activity_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
</ListView>