force-app/main/default/objects/Daily_Health_Record__c/listViews/Todays_Records.listView-meta.xml
<ListView>
    <fullName>Todays_Records</fullName>
    <filterScope>Everything</filterScope>
    <label>Today's Records</label>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Weight_KG__c</columns>
    <columns>Mood__c</columns>
    <columns>Source__c</columns>
    <filters>
        <field>Activity_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
</ListView>